# telescope_assignment

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: alembic.ini  main.py
app/api/: companies.py  deps.py  health.py  routes.py  schema.py
app/core/: config.py  exceptions.py  logging.py
app/db/: init_db.py  session.py
app/migrations/: env.py
app/migrations/versions/: 092fc3d1c0e9_add_year.py  24c5d2b70cb9_add_year.py  2f10e6e28f99_add_year.py  82023952be46_init.py  9719d6cf0090_add_year.py  990700621772_init.py  99ba9bd9159e_initial_migration.py  a57dbd7b5615_add_year.py  e6f491dec2cd_add_year.py
app/models/: companies.py
app/service/: companies.py  import_companies.py  rules.py
app/tests/: conftest.py  csv-dataset.csv  json-dataset.json  test_companies.py  test_health.py
ops/docker/: Dockerfile
resources/: company-dataset.csv  company-dataset.json  rules.json
resources/client/: get_companies.py  import_companies.py  process_companies.py
